Dispatch only 1 or 3 args trim function from parser.
 There is no need to distinguish between the trim function with
 two (trim mode is not provided - BOTH) and three arguments, such
 as it requires to check the number of arguments in the function
 implementation. Therefore, we always dispatch the trim function
 with the explicitly set trim mode.